pequeños cambios y se saco confirm que daba proble

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     </div>
     <br>
 
-    <div id="sum">
+    <div id="sum" class="menu-fixed">
         <span id="texto">La Suma total es de: </span> <span id="canTotal"></span>
     </div>
 
