--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <div id="bloque">
         <form id="product">
-            <input type="text" id="name" placeholder="Nombre del producto" autofocus> <br>
+            <input type="text" id="name" placeholder="Nombre del producto"> <br>
             <select name="" id="menu">
                 <option value="" disabled selected>Seleccione una categoria</option>
                 <option value="pizzas">Pizzas</option>
@@ -35,7 +35,7 @@
                 <option value="postres">Postres</option>
             </select>
             <br>
-            <input type="number" id="price" placeholder="Precio del producto" min="0"> <br>
+            <input step="any" type="number" id="price" placeholder="Precio del producto" min="0"> <br>
             <textarea id="description" cols="30" rows="10" placeholder="Descripcion del producto"></textarea><br>
             <button type="submit">Guardar</button>
 
