mostrar las ventas por fecha seleccionada

--- a/src/ventas.html
+++ b/src/ventas.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ibiza</title>
+    <link rel="stylesheet" href="./ui/ventas.css">
 </head>
 
 <body>
     <h1>SILVIA DEJA DE ROMPER LAS BOLAS</h1>
+
+    <form id="search">
+        <input type="date" id="datesearch">
+        <button type="submit" id="buttonsearch">Buscar</button>
+    </form>
+
+    <div id="viewDay">
+
+    </div>
+
+    <ul id="ventas"> VENTAS DEL FINDE
+    </ul>
+
+    <script src="ui/ventas.js"></script>
+
 </body>
 
 </html>
