--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -134,10 +134,7 @@
         </ul>
     </div>
 
-
-
     <script src="ui/app.js"></script>
-
 
 </body>
 
