sistema funcionand. (falta monto total por fecha)

--- a/src/ventas.html
+++ b/src/ventas.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>SILVIA DEJA DE ROMPER LAS BOLAS</h1>
+    <h1>Selecciona la fecha para buscar Bruja</h1>
 
     <form id="search">
         <input type="date" id="datesearch">
