--- a/src/ventas.html
+++ b/src/ventas.html
@@ -18,10 +18,11 @@
     </form>
 
     <div id="viewDay">
-
     </div>
 
-    <ul id="ventas"> VENTAS DEL FINDE
+    <div id="monto"></div>
+
+    <ul id="ventas"> VENTAS
     </ul>
 
     <script src="ui/ventas.js"></script>
